--- a/backend/views/emailVerification.ejs
+++ b/backend/views/emailVerification.ejs
@@ -9,7 +9,8 @@
             color: #333;
             display: flex;
             flex-direction: column;
-            gap: 0.25rem;
+            flex-wrap: wrap;
+            gap: 30px;
             font-family: 'Arial', sans-serif;
         }
 
@@ -64,10 +65,7 @@
         <span class="message">Dear <%=name%>,</span>
         <span class="message">Please verify your email with the following link:</span>
         <a href="<%=emailVerificationURL%>" class="verify">Verify Email</a>
-        <span class="message">If the link is not clickable, click the link below:</span>
-        <a href="<%=emailVerificationURL%>" class="link">
-            <%=emailVerificationURL%>
-        </a>
+        
     </div>
 </body>
 
